update spec, chapter 6
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/spec/src/main/asciidoc/ch01-introduction.adoc
+++ b/spec/src/main/asciidoc/ch01-introduction.adoc
@@ -152,7 +152,7 @@ relevant to the application. The _binder_ enables _partial binding_ of
 the relevant parts of the XML document to a content tree and
 _marshalling_ updates back to the original XML document.
 
-=== [[a23]]Goals
+=== Goals
 
 The JAXB architecture is designed with the
 goals outlined here in mind.
