--- a/spec/src/main/asciidoc/ch09-compatibility.adoc
+++ b/spec/src/main/asciidoc/ch09-compatibility.adoc
@@ -2,7 +2,7 @@
 // Copyright (c) 2020 Contributors to the Eclipse Foundation
 //
 
-== [[a3815]]Compatibility
+== Compatibility
 
 This section describes conformance
 requirements for an implementor of this specification. A JAXB
