--- a/spec/src/main/asciidoc/ch03-architecture.adoc
+++ b/spec/src/main/asciidoc/ch03-architecture.adoc
@@ -258,7 +258,7 @@ changes to JAXB 1.0 schema to java binding rules as well as the
 introduction of a flexible unmarshalling mode. These changes are
 described in link:jaxb.html#a379[See Unmarshalling Modes]”.
 
-==== [[a256]]Validation
+==== Validation
 
 The constraints expressed in a schema fall
 into three general categories:
